ArticleReviewProject/src/main/java/com/example/articlereviewproject/error/ResourceNotFoundException.java
package com.example.articlereviewproject.error;

public class ResourceNotFoundException extends RuntimeException{
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
